--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,1 +1,1 @@
-<div id="regions_div" style="width: 900px; height: 500px;"></div>
+<div class="map-container"><div id="regions_div" style="width: 100%; height: 500px;"></div></div>
